# build-system-archive-import-examples

./: README.md  parse_redist.py  pyproject.toml  shell-parse.sh
.github/workflows/: publish.yml
bazel/1_pkg_tar/: README.md  WORKSPACE
bazel/1_pkg_tar/main/: BUILD
cmake/1_FindCUDAToolkit/: CMakeLists.txt  README.md
cmake/2_ExternalProject/: CMakeLists.txt  README.md
debian/: Makefile
debian/example/debian/: rules
debian/example/debian/templates/: changelog.in  control.in
debian/meta/: stubrepo-debian.sh
rpm/: Makefile
rpm/example/SPECS/: example.spec
rpm/meta/: stubrepo-rpm.sh
